--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
+colour = "0.7.0"
+dialoguer = "0.11.0"
+serde_json = "1.0.1"
